styles/styles.css
/* ... */
body .container .experience .exper .link {
  margin-left: .5rem;
}

body .container .experience .exper .About {
  font-weight: 200;
  font-size: 1rem;
  line-height: 20px;
}

body .container .projects {
  padding: 1.5rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

body .container .projects .projectHead {
  font-weight: 400;
  font-size: 2.81rem;
  line-height: 45px;
}

body .container .projects .allProjects {
  margin-top: 2rem;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (1fr)[1];
      grid-template-columns: repeat(1, 1fr);
  gap: 2.5rem;
}

body .container .projects .allProjects .project {
  border: .1px white solid;
  border-radius: 10px;
  padding: .3rem;
  width: 100%;
}

body .container .projects .allProjects .project .imageContainer {
  width: 100%;
  height: 11rem;
  overflow: hidden;
}

body .container .projects .allProjects .project .imageContainer .projectImage {
  width: 100%;
  height: 100%;
  -webkit-transition: -webkit-transform 300ms ease-in-out;
  transition: -webkit-transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out;
  transition: transform 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
}

body .container .projects .allProjects .project .imageContainer .projectImage:hover {
  -webkit-transform: scale(1.1);
          transform: scale(1.1);
}

body .container .projects .allProjects .project .projectName {
  margin-top: 1.5rem;
  font-size: 2rem;
}

body .container .projects .allProjects .project .aboutProject {
  font-weight: 200;
  line-height: 1.5rem;
  margin-bottom: 1rem;
}

body .container .projects .allProjects .project .techUsed {
  margin-top: .5rem;
  width: 100%;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (1fr)[3];
      grid-template-columns: repeat(3, 1fr);
  gap: 1rem;
}

body .container .projects .allProjects .project .techUsed .tech {
  text-align: center;
  padding: .5rem;
  border: 1px white solid;
  border-radius: 100px;
}

body .container .projects .allProjects .project .projectLinks {
  margin-top: 1.5rem;
  border: 1px white solid;
  padding: 1rem;
  border-radius: 10px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
}

body .container .projects .allProjects .project .projectLinks .link {
  border: 1px white solid;
  padding: .5rem;
  border-radius: 10px;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

body .container .projects .allProjects .project .projectLinks .link:hover {
  color: #0D0D0D;
  background-color: white;
}

body .container .projects .moreProjects {
  padding: 1rem;
  margin: 2rem auto;
  font-size: 1.2rem;
  border: 1px white solid;
  color: white;
  background-color: #0D0D0D;
  cursor: pointer;
  -webkit-transition: all 400ms ease-in-out;
  transition: all 400ms ease-in-out;
}

body .container .projects .moreProjects:hover {
  background-color: white;
  color: #0D0D0D;
}

body .container .contact {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 1.5rem;
  background-color: #1E1E1E;
  margin-top: auto;
  padding: 1.5rem;
}

body .container .contact .contactHead {
  border: 1px white solid;
  padding: 1rem;
  margin-bottom: 1rem;
}

body .container .contact .media {
  margin-top: 2rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
}

body .container .contact .media a img {
  width: 1.5rem;
  height: 1.5rem;
}
/* ... */

